# AI-Telecaller

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_create_hospital_tables.py  0003_create_documents_table.py  0004_create_conversation_tables.py
backend/app/: main.py
backend/app/ai/: chunker.py  embeddings.py  evaluation.py  llm.py  memory.py  parsers.py  prompt_builder.py  retriever.py  safety.py  text_cleaner.py  vector_store.py
backend/app/api/: deps.py  health.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/database/: base.py  session.py
backend/app/models/: __init__.py  conversation.py  department.py  doctor.py  document.py  hospital.py  user.py
backend/app/repositories/: conversation_repository.py  department_repository.py  doctor_repository.py  document_repository.py  hospital_repository.py  user_repository.py
backend/app/schemas/: auth.py  chat.py  department.py  doctor.py  document.py  health.py  hospital.py  rag.py  schedule.py
backend/app/services/: auth_service.py  chat_service.py  doctor_service.py  (+6 more)
backend/evals/: golden_dataset.json
backend/scripts/: __init__.py  rag_eval.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_departments.py  test_doctors.py  test_health.py  test_hospitals.py  test_ingestion.py  test_knowledge.py  test_rag.py  test_rag_evaluation.py
(+46 files in other folders)
